2002-10-29  Martin Weber <martweb@gmx.net>

	* fit.c: fix code broken by Masatake at 
	2002-11-04.
	
2002-11-04  Masatake YAMATO  <yamato@redhat.com>

	* fit.c (new_fitting_opts::error_threshold): 
	Fix the default value to 2.0.

2002-11-03  Masatake YAMATO  <yamato@redhat.com>

	* fit.[ch]: Removed unused ifdefs.

2002-10-31  Masatake YAMATO  <yamato@redhat.com>

	* *: width_factor, weight_factor -> width_weight_factor.

	* configure.in: added -lm to the macro
	that checks libpng. Suggested by jlm <jsado@attbi.com>.

2002-10-29  Martin Weber <martweb@gmx.net>

	* pxl-outline.c (is_valid_dir): used
	COMPUTE_DELTA twice to avoid a bug.

	Message-ID: <3DBEDC7E.9F1FD467@gmx.net>.

2002-10-30  Masatake YAMATO  <yamato@redhat.com>

	* configure.in: Display more messages
	while checking pstoedit twice.
	Suggested by Markus Demleitner 
	<msdemlei@cl.uni-heidelberg.de>.

2002-10-29  Martin Weber <martweb@gmx.net>

	* pxl-outline.c (num_neighbors): New function.
	(find_centerline_pixels): Use num_neighbors.

	Message-ID: <3DBEB1A2.4CC602BA@gmx.net>.

2002-10-29  Masatake YAMATO  <yamato@redhat.com>

	* input-magick.c (input_magick_reader): Do DestroyImage
	before DestroyImageInfo.

	* main.c (main): Put a space in a message(inputformat).
	(read_command_line): Fix a typo.

2002-10-26  Ralf Stubner <ralf.stubner@physik.uni-erlangen.de>

	* autotrace.c: #include "output-pstoedit.h"
	with ifdef. 

2002-10-24  Masatake YAMATO  <yamato@redhat.com>

	* configure.in: version 0.31.0.

2002-10-24  Martin Weber <martweb@gmx.net>

	* autotrace.dsp (RSC): Version 0.31.

	* autotrace.vcproj: Ditto.
	
2002-10-23  Martin Weber <martweb@gmx.net>

	* pxl-outline.c (is_valid_dir): 
	removed comment.

	* NEWS: updated.
	
	Message-ID: <21731.1035350777@www20.gmx.net>.
	
2002-10-23  Masatake YAMATO  <yamato@redhat.com>

	* output-pstoedit.c (get_symbolicname) 
	(pstoedit_suffix_table_init): free return
	value of getPstoeditDriverInfo_plainC.
	(get_symbolicname): returned value is strdup'ed.